<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_animal">

    <fragment
        android:id="@+id/nav_animal"
        android:name="com.proyecto.animalesextintos.ui.animal.AnimalFragment"
        android:label="@string/menu_animal"
        tools:layout="@layout/fragment_animal" >
        <action
            android:id="@+id/action_nav_animal_to_updateAnimalFragment"
            app:destination="@id/updateAnimalFragment" />
        <action
            android:id="@+id/action_nav_animal_to_addAnimalFragment"
            app:destination="@id/addAnimalFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.proyecto.animalesextintos.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.proyecto.animalesextintos.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/addAnimalFragment"
        android:name="com.proyecto.animalesextintos.ui.animal.AddAnimalFragment"
        android:label="fragment_add_animal"
        tools:layout="@layout/fragment_add_animal" >
        <action
            android:id="@+id/action_addAnimalFragment_to_nav_animal"
            app:destination="@id/nav_animal" />
    </fragment>
    <fragment
        android:id="@+id/updateAnimalFragment"
        android:name="com.proyecto.animalesextintos.ui.animal.UpdateAnimalFragment"
        android:label="fragment_update_animal"
        tools:layout="@layout/fragment_update_animal" >
        <action
            android:id="@+id/action_updateAnimalFragment_to_nav_animal"
            app:destination="@id/nav_animal" />
        <argument
            android:name="animal"
            app:argType="com.proyecto.animalesextintos.model.Animal" />
    </fragment>
</navigation>