<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Principal">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/animalName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="25sp"
            android:padding="10sp"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/labelLatitud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latitud"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/labelLongitud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/longitud"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/labelAltura"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/altura"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtLatitud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/txtLongitud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/txtAltura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center" />
            </TableRow>

        </TableLayout>
        <Button
            android:id="@+id/btnmaps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Maps" />
    </LinearLayout>
</FrameLayout>